Fix js paths for production index.html

--- a/WelcomeToVR/index.html
+++ b/WelcomeToVR/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
   </head>
   <body>
-    <script src="./vr/build/client.bundle?platform=vr"></script>
+    <script src="./vr/build/client.bundle.js"></script>
     <script>
       // Initialize the React VR application
       ReactVR.init(
-        './vr/build/index.bundle.js?platform=vr',
+        './vr/build/index.bundle.js',
         // Attach it to the body tag
         document.body
       );
